<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/navRow"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_gravity="bottom"
        android:background="@drawable/bg_bottom_navigation"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/homeItem"
            style="@style/LumoraBottomNavItem">
            <androidx.compose.ui.platform.ComposeView
                android:id="@+id/homeIcon"
                style="@style/LumoraBottomNavIcon" />
            <TextView
                android:id="@+id/homeLabel"
                style="@style/LumoraBottomNavLabel"
                android:text="@string/ui_home" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/templatesItem"
            style="@style/LumoraBottomNavItem">
            <androidx.compose.ui.platform.ComposeView
                android:id="@+id/templatesIcon"
                style="@style/LumoraBottomNavIcon" />
            <TextView
                android:id="@+id/templatesLabel"
                style="@style/LumoraBottomNavLabel"
                android:text="@string/ui_templates" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/historyItem"
            style="@style/LumoraBottomNavItem">
            <androidx.compose.ui.platform.ComposeView
                android:id="@+id/historyIcon"
                style="@style/LumoraBottomNavIcon" />
            <TextView
                android:id="@+id/historyLabel"
                style="@style/LumoraBottomNavLabel"
                android:text="@string/ui_history" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profileItem"
            style="@style/LumoraBottomNavItem">
            <androidx.compose.ui.platform.ComposeView
                android:id="@+id/profileIcon"
                style="@style/LumoraBottomNavIcon" />
            <TextView
                android:id="@+id/profileLabel"
                style="@style/LumoraBottomNavLabel"
                android:text="@string/ui_profile" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
